--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,10 @@
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top shadow-sm">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top shadow-lg">
   <div class="container-fluid">
-    <!-- Brand: Left -->
-    <a class="navbar-brand fw-bold text-uppercase" href="#">SoftCode</a>
+    <!-- Brand -->
+    <a class="navbar-brand fw-bold text-uppercase" routerLink="/Home">SoftCode</a>
 
-    <!-- Toggler: Mobile -->
+    <!-- Mobile Toggle -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
       aria-label="Toggle navigation">
@@ -15,20 +15,24 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" routerLink="/Home">Home</a>
         </li>
+
+        <!-- Dropdown with animation -->
         <li class="nav-item">
-          <a class="nav-link" href="Services">Services</a>
+          <a class="nav-link" routerLink="/Services">Services</a>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link" href="Contact">Contact</a>
+          <a class="nav-link" routerLink="/Contact">Contact</a>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link" href="About">About Us</a>
+          <a class="nav-link" routerLink="/About">About Us</a>
         </li>
       </ul>
 
-      <!-- Search: Right -->
+      <!-- Search -->
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-light" type="submit">Search</button>
@@ -37,18 +41,49 @@
   </div>
 </nav>
 
-<!-- Angular Content -->
+<!-- Angular Router Outlet -->
 <router-outlet></router-outlet>
 
-<!-- Footer -->
-<footer class="bg-dark text-white mt-5">
-  <div class="container text-center py-4">
-    <p class="mb-1">&copy; 2023 SoftCode. All rights reserved.</p>
-    <p class="mb-0">
-      Follow us on:
-      <a href="#" class="text-white text-decoration-none mx-1">Facebook</a> |
-      <a href="#" class="text-white text-decoration-none mx-1">Twitter</a> |
-      <a href="#" class="text-white text-decoration-none mx-1">Instagram</a>
-    </p>
+<footer class="bg-dark text-light py-4">
+  <div class="container">
+    <div class="row gy-4">
+      
+      <!-- Brand -->
+      <div class="col-md-4">
+        <h5>SoftCode</h5>
+        <p class="small">Creating smart web & app solutions for your digital future.</p>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="col-md-4">
+        <h6>Quick Links</h6>
+        <ul class="list-unstyled small">
+          <li><a routerLink="/" routerLinkActive="active" class="text-light text-decoration-none">Home</a></li>
+          <li><a href="#" class="text-light text-decoration-none">Features</a></li>
+          <li><a href="#" class="text-light text-decoration-none">Pricing</a></li>
+          <li><a routerLink="/contact" routerLinkActive="active" class="text-light text-decoration-none">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- Social -->
+      <div class="col-md-4">
+        <h6>Follow Us</h6>
+        <div class="d-flex gap-3">
+          <a href="https://facebook.com" target="_blank" class="text-light">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://twitter.com" target="_blank" class="text-light">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://instagram.com" target="_blank" class="text-light">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://github.com/hamynaeem" target="_blank" class="text-light">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
+      </div>
+
+    </div>
   </div>
 </footer>
