--- a/src/app/contact/contact.css
+++ b/src/app/contact/contact.css
@@ -3,6 +3,8 @@
 }
 
 .contact-us .card {
+    background: linear-gradient(270deg, #0d6efd, #6610f2, #6f42c1);
+
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -25,7 +27,7 @@
 }
 
 .contact-us .btn {
-  background-color: #212529;
+  background: linear-gradient(270deg, #0d6efd, #6610f2, #6f42c1);
   color: #fff;
   font-weight: 600;
 }
